@startuml
skinparam Shadowing false
skinparam DefaultFontName Arial
skinparam BackgroundColor white
skinparam ArrowColor #4B5563

hide empty methods
skinparam classAttributeIconSize 0
left to right direction
title CD-00 - Tổng quan miền lõi RestaurantPOS
caption Sơ đồ chỉ mục cấp cao cho toàn hệ thống, dùng để nhìn nhanh các aggregate/chuỗi nghiệp vụ chính\ntrước khi tách thành sơ đồ con.
skinparam class {
  BackgroundColor white
  BorderColor #374151
  ArrowColor #4B5563
  HeaderBackgroundColor #E5EEF9
}

class "User" as User <<entity>> {
  {static} table = users
  --
  user_id
  role_id
  current_tier_id
  row_version
  privacy_anonymized_at
  username
  full_name
}

class "Branch" as Branch <<entity>> {
  {static} table = branches
  --
  branch_id
  row_version
  branch_code
  business_hours
  closure_windows
  booking_policy
  currency
}

class "RestaurantTable" as RestaurantTable <<entity>> {
  {static} table = restaurant_tables
  --
  table_id
  branch_id
  template_id
  row_version
  status
  price
  table_code
}

class "TableHold" as TableHold <<entity>> {
  {static} table = table_holds
  --
  hold_id
  user_id
  confirmed_reservation_id
  session_id
  row_version
  hold_status
  branch_id
}

class "Reservation" as Reservation <<entity>> {
  {static} table = reservations
  --
  reservation_id
  user_id
  applied_user_voucher_id
  row_version
  status
  deposit_status
  deposit_intent_status
}

class "WaitingList" as WaitingList <<entity>> {
  {static} table = waiting_list
  --
  waiting_id
  user_id
  customer_session_id
  row_version
  status
  customer_response_status
  branch_id
}

class "ReservationOrder" as ReservationOrder <<entity>> {
  {static} table = reservation_orders
  --
  order_id
  reservation_id
  created_by
  row_version
  status
  created_at
  updated_at
}

class "Payment" as Payment <<ledger>> {
  {static} table = payments
  --
  payment_id
  reservation_id
  refund_of_payment_id
  created_by
  row_version
  idempotency_key
  payment_type
}

class "Conversation" as Conversation <<entity>> {
  {static} table = conversations
  --
  conversation_id
  branch_id
  user_id
  linked_reservation_id
  linked_waiting_list_id
  customer_session_id
  session_id
}

class "BranchSchedulingPolicyService" as BranchSchedulingPolicyService <<control>> {
  orchestrates flow
}

class "ReservationService" as ReservationService <<control>> {
  orchestrates flow
}

class "StaffTableOrderService" as StaffTableOrderService <<control>> {
  orchestrates flow
}

class "StaffCheckoutService" as StaffCheckoutService <<control>> {
  orchestrates flow
}

class "StaffConversationInboxService" as StaffConversationInboxService <<control>> {
  orchestrates flow
}

User "1" --> "0..*" Reservation : reservations\nFK: user_id
User "1" --> "0..*" Payment : createdPayments\nFK: created_by
User "1" --> "0..*" Conversation : conversations\nFK: user_id
RestaurantTable "0..*" --> "1" Branch : branch\nFK: branch_id
RestaurantTable "0..*" -- "0..*" TableHold : via table_hold_details
TableHold "0..*" --> "1" User : user\nFK: user_id
TableHold "0..*" --> "1" Reservation : confirmedReservation\nFK: confirmed_reservation_id
Reservation "0..*" -- "0..*" RestaurantTable : via reservation_tables\nassociation: ReservationTable
Reservation "1" --> "0..*" ReservationOrder : orders\nFK: reservation_id
Reservation "1" --> "0..*" Payment : payments\nFK: reservation_id
WaitingList "0..*" --> "1" User : user\nFK: user_id
ReservationOrder "0..*" --> "1" User : createdByUser\nFK: created_by
Payment "0..*" --> "1" Payment : refundOfPayment\nFK: refund_of_payment_id
Payment "1" --> "0..*" Payment : refundPayments\nFK: refund_of_payment_id
Conversation "0..*" --> "1" Branch : branch\nFK: branch_id
Conversation "0..*" --> "1" Reservation : linkedReservation\nFK: linked_reservation_id
Conversation "0..*" --> "1" WaitingList : linkedWaitingList\nFK: linked_waiting_list_id
BranchSchedulingPolicyService ..> User : uses
ReservationService ..> User : uses
StaffTableOrderService ..> User : uses
StaffCheckoutService ..> User : uses
StaffConversationInboxService ..> User : uses
@enduml
